deploymentfile/onlineshop-gateway.yaml
#######################################################
# OnlineShop Gateway
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlineshop-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
#######################################################
# OnlineShop Backend Virtual Service Account
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onlineshop-backend-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - onlineshop-gateway
  http:
    - match:
        - uri:
            prefix: /onlineshop
        - uri:
            prefix: /onlineshop/books
        - uri:
            exact: /h2-console
        - uri:
            prefix: /h2-console

      route:
        - destination:
            host: onlineshop-backend
            port:
              number: 8181

---
#######################################################
# OnlineShop FrontEnd Virtual Service Account
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onlineshop-frontend-virtual-service
spec:
  gateways:
    - onlineshop-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /onlineshop-ui
        - uri:
            exact: /onlineshop-ui
        - uri:
            prefix: /static
        - uri:
            prefix: /assets
      route:
        - destination:
            host: onlineshop-frontend
            port:
              number: 80

#---
